<resources>
    <string name="app_name">IconsPreview</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="actions">Actions</string>
    <string name="alerts">Alerts</string>
    <string name="avs">Avs</string>
    <string name="communications">Communications</string>
    <string name="contents">Contents</string>
    <string name="devices">Devices</string>
    <string name="editors">Editors</string>
    <string name="files">Files</string>
    <string name="hardwares">Hardwares</string>
</resources>
