<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_action"
            android:checked="true"
            android:icon="@drawable/ic_assessment_black_120dp"
            android:title="@string/actions" />
        <item
            android:id="@+id/nav_alert"
            android:icon="@drawable/ic_add_alert_black_48dp"
            android:title="@string/alerts" />
        <item
            android:id="@+id/nav_av"
            android:icon="@drawable/ic_album_black_120dp"
            android:title="@string/avs" />
        <item
            android:id="@+id/nav_communication"
            android:icon="@drawable/ic_business_black_120dp"
            android:title="@string/communications" />

        <item
            android:id="@+id/nav_content"
            android:icon="@drawable/ic_move_to_inbox_black_120dp"
            android:title="@string/contents" />

        <item
            android:id="@+id/nav_device"
            android:icon="@drawable/ic_signal_wifi_2_bar_black_120dp"
            android:title="@string/devices" />

        <item
            android:id="@+id/nav_editor"
            android:icon="@drawable/ic_attach_file_black_120dp"
            android:title="@string/editors" />

        <item
            android:id="@+id/nav_file"
            android:icon="@drawable/ic_folder_open_black_120dp"
            android:title="@string/files" />

    </group>

</menu>
